6. ECK/quick-start-kibana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickstart-kb-http
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: kb.localhost
      http:
        paths:
          - path: /
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
            pathType: Prefix
